--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql 
 DB_HOST=localhost
 DB_PORT=3306 
-DB_DATABASE=deepreach_2
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=deepreach
+DB_USERNAME=shery123
+DB_PASSWORD=shery123
 
 BROADCAST_DRIVER=log 
 CACHE_DRIVER=file 
@@ -20,12 +20,12 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1 
 REDIS_PASSWORD=null 
 REDIS_PORT=6379  
-MAIL_DRIVER=smtp 
-MAIL_HOST=smtp.mailtrap.io 
-MAIL_PORT=2525 
-MAIL_USERNAME=null 
-MAIL_PASSWORD=null 
-MAIL_ENCRYPTION=null  
+
+MAIL_DRIVER=mailgun
+MAILGUN_DOMAIN=admin.deep-reach.com
+MAILGUN_SECRET=227e63a002e52ee15b75bdcffc670128-9c988ee3-78270ffd
+
+ 
 AWS_ACCESS_KEY_ID= 
 AWS_SECRET_ACCESS_KEY= 
 AWS_DEFAULT_REGION=us-east-1 
