--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql 
 DB_HOST=localhost
 DB_PORT=3306 
-DB_DATABASE=deepreach
-DB_USERNAME=shery123
-DB_PASSWORD=shery123
+DB_DATABASE=deepreach_2
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log 
 CACHE_DRIVER=file 
